# tardigrade-db

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  clippy.toml  crates.js  deny.toml  help.html  index.html  justfile  lefthook.yml  pyproject.toml  resumancer_logs.txt  resumancer_logs_advanced.txt  resumancer_logs_current.txt  resumancer_logs_final.txt  settings.html  src-files.js  typos.toml
.claude/plans/: connector-hardening-plan.md  llama-cpp-hook-plan.md  rust-retrieval-key-adapter-plan.md
.config/: nextest.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  publish.yml
benchmarks/: README.md  docker-compose.external.yml
benchmarks/mem0/: Dockerfile
benchmarks/scripts/: prepare_phase1_datasets.py  test_prepare_phase1_datasets.py
crates/tdb-core/: Cargo.toml
crates/tdb-core/src/: error.rs  kv_pack.rs  lib.rs  memory_cell.rs  synaptic_bank.rs  types.rs
crates/tdb-core/tests/: error_diagnostics.rs
crates/tdb-engine/: Cargo.toml
crates/tdb-engine/benches/: engine.rs  text_migration.rs
crates/tdb-engine/examples/: basic_usage.rs
crates/tdb-engine/src/: batch_cache.rs  cell_source_pool.rs  checkpoint.rs  engine.rs  lib.rs  maintenance.rs  pack_directory.rs  pack_materialization.rs  pack_read_profile.rs  scheduler.rs  snapshot.rs
crates/tdb-engine/tests/: acceptance.rs  acceptance_vamana_threshold.rs  cell_source_contract.rs  checkpoint_acceptance.rs  owner_registry.rs  retrieval_recall_after_q4_archival.rs  scheduler_acceptance.rs  snapshot_acceptance.rs  sweep_now_acceptance.rs  write_buffer_acceptance.rs
crates/tdb-governance/: Cargo.toml
crates/tdb-governance/src/: decay.rs  lib.rs  scoring.rs  tiers.rs
crates/tdb-governance/tests/: acceptance.rs
crates/tdb-index/: Cargo.toml
crates/tdb-index/benches/: vamana.rs  wal.rs
crates/tdb-index/src/: lib.rs  trace.rs  wal.rs
crates/tdb-index/src/vamana/: mod.rs  prune.rs
crates/tdb-index/tests/: acceptance.rs
crates/tdb-python/: Cargo.toml  pyproject.toml
crates/tdb-python/src/: lib.rs
crates/tdb-retrieval/: Cargo.toml
crates/tdb-retrieval/benches/: retrieval.rs
crates/tdb-retrieval/src/: attention.rs  cell_source.rs  int8_quant.rs  key_view.rs  lib.rs  per_token.rs  pipeline.rs  refinement.rs  retriever.rs  simd_distance.rs  slb.rs  token_weighter.rs
crates/tdb-retrieval/src/quantization/: calibrator.rs  int8_group.rs  mod.rs  per_channel_scaled.rs  strategy.rs
crates/tdb-retrieval/tests/: acceptance.rs  int8_tier_lru_bound.rs  outlier_quantization_roundtrip.rs  per_token_lazy_query.rs  per_token_q4_roundtrip.rs
crates/tdb-storage/: Cargo.toml
crates/tdb-storage/benches/: block_pool.rs  quantization.rs
crates/tdb-storage/fuzz/: Cargo.toml
crates/tdb-storage/fuzz/fuzz_targets/: fuzz_q4_round_trip.rs  fuzz_segment_read.rs
crates/tdb-storage/src/: arena.rs  block_pool.rs  deletion_log.rs  lib.rs  quantization.rs  segment.rs  synaptic_store.rs  text_store.rs
crates/tdb-storage/tests/: acceptance.rs
data/: longmemeval_s_sample.jsonl
dev/bench-v1/: index.html  latest-full-compare.html  latest-full-compare.md  latest-full-report.html  results.html  (+4 more)
docs/: database-learning-roadmap.md  learning-roadmap.md  rustdoc-header.html
examples/: agent_memory.py  e2e_demo.py  if_demo.py  kv_injection_validation.py  kv_memory_test.py  llama_memory_test.py  multi_agent_demo.py  sonnet_memory_test.py
experiments/: auto_link_calibration.py  auto_link_scale_test.py  boost_sweep.py  corpus_100.py  cross_model_retrieval.py  file_ingest_and_multiview_experiment.py  footprint_audit.py  injection_vs_text_rag.py  kv_pipeline_debug.py  latency_benchmark.py  latency_benchmark_v2.py  llama3_fresh_agent_validation.py  llama3_two_agent_validation.py  maya_kv_tensors_comparison.py  maya_per_token_qwen3.py  multi_memory_3b_oracle.py  multi_memory_corpus.py  multi_memory_experiment.py  multi_memory_linked_to_existing.py  multi_memory_oracle_injection.py  multi_memory_rag_retrieval_debug.py  multi_memory_retrieval_debug.py  multi_memory_rope_corrected.py  multi_memory_scale_debug.py  multi_memory_scale_test.py  multi_memory_trace_experiment.py  multiview_diagnosis.py  multiview_v2_experiment.py  novel_facts_corpus.py  rls_experiment.py  scale_100_hidden_top5.py  scale_100_qk.py  scale_100_qk_diagnostics.py  scale_100_rag_baseline.py  scale_100_vague_vs_rag.py  scale_recall_benchmark.py  shared_llm_latency.py  sonia_multilife_qwen3.py  sonia_per_token_pipeline.py  sonia_production_sim.py  (+7 more)
python/: bench.py
scripts/: lint_lazy_imports.py  probe_adapter_direct.py  probe_chunk_quality.py  probe_hub_cells.py  probe_key_inspect.py  probe_locomo_reranker.py  probe_missing_items.py  probe_rank_diagnostic.py  probe_recall_audit.py  probe_retrieval_forensic.py  run_challenger_headline.sh  run_p1_reranker_shootout.sh  run_p1_with_smoke_gate.sh  setup.sh  smoke_challenger_30.sh  smoke_llm_gated_50.sh
search.index/: 00013320326b.js  0005fc8475e2.js  00061fc670bb.js  00074dfe89fd.js  001769cdebc7.js  001f98e64cf6.js  002316f3f331.js  002755688b52.js  004825feb4a8.js  004c0bd84dbd.js  004dbc29604f.js  006353540837.js  0079fc750378.js  007b717d5fe0.js  008457dab911.js  0089bb5a87e7.js  008b2cbb9efa.js  008fa8af3ff4.js  0090e36cc78a.js  00983b9af3be.js  0098facc6600.js  00a3b8119f12.js  00ab26e11a52.js  00c10f146d57.js  00c604498526.js  00cb7626934e.js  00cc37ec55ff.js  00d6823eed9d.js  00d9a8b13b3c.js  00e9f48b2b34.js  00ea46dd4fec.js  00f540fbf915.js  00fccd595d18.js  0100b53c8c2e.js  01100d42d8c4.js  011326b5d8b6.js  011733bddbec.js  012ad6140b89.js  01307cb56edd.js  01358e07585b.js  (+3722 more)
tdb_core/: all.html  index.html  sidebar-items.js
tdb_engine/: all.html  enum.EdgeType.html  index.html  sidebar-items.js
tdb_governance/: all.html  index.html  sidebar-items.js
tdb_index/: all.html  index.html  sidebar-items.js
tdb_retrieval/: all.html  index.html  sidebar-items.js
tdb_storage/: all.html  index.html  sidebar-items.js
(+1112 files in other folders)
