[workspace]
resolver = "2"
members = [
    "crates/tdb-core",
    "crates/tdb-storage",
    "crates/tdb-retrieval",
    "crates/tdb-index",
    "crates/tdb-governance",
    "crates/tdb-engine",
    "crates/tdb-python",
]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"
rust-version = "1.95"
publish = false

[workspace.dependencies]
# Internal crates
tdb-core = { path = "crates/tdb-core" }
tdb-storage = { path = "crates/tdb-storage" }
tdb-retrieval = { path = "crates/tdb-retrieval" }
tdb-index = { path = "crates/tdb-index" }
tdb-governance = { path = "crates/tdb-governance" }
tdb-engine = { path = "crates/tdb-engine" }

# Shared external dependencies
thiserror = "2"
memmap2 = "0.9"
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"
half = { version = "2", features = ["num-traits"] }
bytemuck = { version = "1", features = ["derive"] }
lru = "0.16"

# Snapshot / persistence packaging (M1.2). `tar` for portable
# archive packaging, `serde`/`serde_json` for the manifest header,
# `sha2` for content-integrity hashes. All mature low-churn crates
# used in production storage engines.
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

# Shared dev dependencies (used via [dev-dependencies] foo = { workspace = true })
criterion = { version = "0.8", features = ["html_reports"] }
rstest = "0.26"
tempfile = "3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allowed — conflict with project patterns
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
struct_field_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Hard denials — project invariants
undocumented_unsafe_blocks = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
uninlined_format_args = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
doc_markdown = "warn"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unused_must_use = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = 2
strip = "none"

# Faster CI builds — no debug info, no incremental (DataFusion/Qdrant pattern)
[profile.ci]
inherits = "dev"
debug = 0
incremental = false
