[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tardigrade-db"
version = "0.1.5"
description = "LLM-native database kernel — persistent KV cache memory for autonomous AI agents"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "kv-cache", "agent-memory", "database", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
torch = ["torch>=2.0"]
transformers = ["torch>=2.0", "transformers>=4.30"]

[project.scripts]
tardigrade = "tardigrade_cli.main:main"

[project.urls]
Repository = "https://github.com/Eldriss-Studio/tardigrade-db"
Documentation = "https://eldriss-studio.github.io/tardigrade-db"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/tdb-python/Cargo.toml"
module-name = "tardigrade_db._native"
python-source = "python"
python-packages = ["tardigrade_db", "tardigrade_hooks", "tardigrade_vllm", "tardigrade_mcp", "tardigrade_cli", "tardigrade_http"]
