[package]
name = "tdb-core"
description = "Core types and error definitions for TardigradeDB"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
half = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
