[package]
name = "tdb-engine"
description = "Top-level orchestrator: MEM.READ/WRITE dispatch, scheduler, batch cache"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tdb-core = { workspace = true }
tdb-storage = { workspace = true }
tdb-retrieval = { workspace = true }
tdb-index = { workspace = true }
tdb-governance = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "engine"
harness = false
