[package]
name = "tdb-governance"
description = "Adaptive Knowledge Lifecycle: importance scoring, maturity tiers, recency decay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tdb-core = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
