[package]
name = "tdb-index"
description = "Vamana graph index, episodic Trace graph, and WAL for TardigradeDB"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tdb-core = { workspace = true }
tdb-storage = { workspace = true }
crossbeam-epoch = { workspace = true }
crossbeam-utils = { workspace = true }
