[package]
name = "tdb-index"
description = "Vamana graph index, episodic Trace graph, and WAL for TardigradeDB"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tdb-core = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
