[package]
name = "tdb-index"
description = "Vamana graph index, episodic Trace graph, and WAL for TardigradeDB"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tdb-core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "vamana"
harness = false

[[bench]]
name = "wal"
harness = false
