[package]
name = "tdb-python"
description = "Python bindings for TardigradeDB via PyO3"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

# tdb-python does not inherit workspace pedantic lints — PyO3 #[pymethods]
# require pass-by-value for Python-facing args (PyReadonlyArray1 etc.),
# which conflicts with clippy::needless_pass_by_value.
[lints.clippy]
doc_markdown = "warn"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[lib]
name = "tardigrade_db"
crate-type = ["cdylib"]

[dependencies]
tdb-engine = { workspace = true }
pyo3 = "0.24"
numpy = "0.28"
