[package]
name = "tdb-retrieval"
description = "Latent-space retrieval: SLB, attention scoring, SIMD brute-force matmul"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tdb-core = { workspace = true }
tdb-storage = { workspace = true }
