[package]
name = "tdb-retrieval"
description = "Latent-space retrieval: SLB, attention scoring, SIMD brute-force matmul"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tdb-core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "retrieval"
harness = false
