[package]
name = "tdb-storage"
description = "Block pool, mmap arena, and quantization for TardigradeDB"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tdb-core = { workspace = true }
memmap2 = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
