[package]
name = "tdb-storage"
description = "Block pool, mmap arena, and quantization for TardigradeDB"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tdb-core = { workspace = true }
half = { workspace = true }
memmap2 = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "quantization"
harness = false

[[bench]]
name = "block_pool"
harness = false
